--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,11 +6,15 @@ html {
 
 body {
     font-family: 'Alumni Sans', sans-serif;
-    margin: 0;
+    margin: 100px 0 0 0;
     padding: 0;
 }
 
 header {
+    position: fixed;
+    top: 0;
+    z-index: 1000;
+    border-bottom: 1px solid #e0e0e0;
     display: flex;
     height: 100px;
     align-items: center;
@@ -456,6 +460,7 @@ main:nth-child(3) {
     font-weight: bolder;
     align-self: center;
 }
+
 .form-header-join-text {
     font-size: 40px;
     font-weight: bolder;
@@ -585,20 +590,24 @@ form > button:hover {
     justify-content: center;
     align-items: center;
 }
-.success-header{
+
+.success-header {
     font-size: 90px;
     margin: 0;
 }
-.success-text{
+
+.success-text {
     font-size: 64px;
     margin: 0;
 }
-.success-image{
-    margin-top: 22px ;
+
+.success-image {
+    margin-top: 22px;
     height: 122px;
     width: 122px;
 }
-.success-button{
+
+.success-button {
     margin-top: 20px;
     width: 380px;
     height: 80px;
@@ -615,11 +624,13 @@ form > button:hover {
     justify-content: center;
     transition: background-color 0.3s ease-out;
 }
+
 .success-button:hover {
-     background-color: #171717;
-     color: white;
-     border: 1px white solid;
- }
+    background-color: #171717;
+    color: white;
+    border: 1px white solid;
+}
+
 .labforbeer-info {
     text-transform: uppercase;
     display: block;
@@ -627,45 +638,155 @@ form > button:hover {
     height: 768px;
     color: #F6F6F6;
 }
+
 .labforbeer-info-added {
     display: block;
     width: 880px;
     height: 200px;
     color: #F6F6F6;
 }
+
 .labforbeer-info-block {
     display: block;
     margin-top: 22px;
     width: 100%;
     height: 350px;
 }
-.labforbeer-info-added>.labforbeer-info-block {
+
+.labforbeer-info-added > .labforbeer-info-block {
     display: block;
     margin-top: 22px;
     width: 100%;
     height: 0;
 }
-.labforbeer-info>h1 {
+
+.labforbeer-info > h1 {
     color: #0B0B0B;
     font-size: 65px;
     margin-top: 0;
 }
-.labforbeer-info-added>h1{
+
+.labforbeer-info-added > h1 {
     color: #0B0B0B;
     font-size: 65px;
     margin-top: 40px;
     text-align: right;
 }
-.labforbeer-info-line{
+
+.labforbeer-info-line {
     display: flex;
     justify-content: space-between;
     height: 70px;
-    background-color:  rgba(0,0,0, 0.7);;
+    background-color: rgba(0, 0, 0, 0.7);;
     border-bottom: #D9D9D9 solid 1px;
 }
-.labforbeer-info-line > p{
+
+.labforbeer-info-line > p {
     font-size: 34px;
     margin-top: 14px;
     margin-left: 50px;
     margin-right: 50px;
+}
+
+
+.post-date {
+    color: rgba(0, 0, 0, 0.50);
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: normal;
+    text-transform: uppercase;
+    text-align: start;
+    margin-left: 5px;
+}
+
+.post-background {
+    width: 1300px;
+    height: 500px;
+    border-radius: 5px;
+    background: #FFF;
+    box-shadow: 0px 13px 28px 0px rgba(0, 0, 0, 0.10), 0px 51px 51px 0px rgba(0, 0, 0, 0.09), 0px 114px 68px 0px rgba(0, 0, 0, 0.05), 0px 202px 81px 0px rgba(0, 0, 0, 0.01), 0px 316px 88px 0px rgba(0, 0, 0, 0.00);
+    display: flex;
+}
+
+.post-image {
+    width: 650px;
+    height: 450px;
+    margin: 25px;
+}
+
+.category {
+    height: 58px;
+    width: 100%;
+    text-align: center;
+    margin-top: 0;
+    color: #000;
+    font-size: 96px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    text-transform: uppercase;
+}
+
+.post-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+}
+
+.post {
+    display: flex;
+    flex-direction: column;
+}
+
+.post-filling-container{
+    margin: 0;
+    padding: 0;
+}
+
+.post-header{
+    display: flex;
+    width: 135px;
+    height: 21px;
+    flex-direction: column;
+    justify-content: center;
+    flex-shrink: 0;
+    color: rgba(0, 0, 0, 0.50);
+    text-align: center;
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: normal;
+    text-transform: uppercase;
+}
+
+.post-name{
+    display: flex;
+    width: 489px;
+    height: 22px;
+    flex-direction: column;
+    justify-content: center;
+    flex-shrink: 0;
+    color: #000;
+    text-align: center;
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: normal;
+    text-transform: uppercase;
+}
+.post-short-text{
+    display: flex;
+    width: 487px;
+    height: 42px;
+    flex-direction: column;
+    justify-content: center;
+    flex-shrink: 0;
+    color: rgba(0, 0, 0, 0.50);
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: normal;
+    text-transform: uppercase;
 }
